Fixed a style problem where createTopic success message too close to button

--- a/src/style/createTopic.less
+++ b/src/style/createTopic.less
@@ -55,4 +55,8 @@
       }
     }
   }
+
+  .alert-container{
+    margin-bottom: 24px;
+  }
 }
